# cookiecutter-pypackage

./: .bumpversion.cfg  .pre-commit-config.yaml  404.html  CONTRIBUTING.rst  index.html  pyproject.toml  sitemap.xml
changelog/: index.html
console_script_setup/: index.html
docs/: changelog.md
faq/: index.html
history/: index.html
hooks/: post_gen_project.py
pypi_release_checklist/: index.html
search/: search_index.json
tests/: test_bake_project.py
tutorial/: index.html
{{cookiecutter.project_slug}}/: pyproject.toml  tox.ini
